Created page with "'''Reiter Check.''' (Überprüfen) {| |[[File:Macro WorkFeatures 11.png|200px|left]] | *'''Reiter Check.''' (Überprüfen) * {{KEY|are Parallel ?}} : Überprüft, ob zwei Flächen oder zwei Kanten parallel sind: **Die zwei Flächen/Ebenen oder zwei Kanten/Linien auswählen und auf diese Schaltfläche klicken. * {{KEY|are Perpendicular ?}} : Überprüft, ob zwei Flächen oder zwei Kanten senkrecht zueinander stehen: **Die zwei Flächen/Ebenen oder zwei Kanten/Linien ausw..."

--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro WorkFeatures/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+WorkFeatures&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_WorkFeatures.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro WorkFeatures (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro WorkFeatures (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro WorkFeatures (100% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -218,40 +218,38 @@ Makro ArbeitsFunktionen
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Reset</span>&nbsp;: Werte zur&uuml;cksetzen</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Apply</span>&nbsp;: Werte anwenden</li></ul>
 </td></tr></tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Check. Tab</b>
+<p><b>Reiter Check.</b> (&Uuml;berpr&uuml;fen)
 </p>
 <table>
 <tbody><tr>
 <td><figure class="mw-halign-left" typeof="mw:File"><a href="../index.php?title=Macro_WorkFeatures_11.png&amp;filetimestamp=20151204093308&amp;.html" class="mw-file-description"><img src="../File/Macro_WorkFeatures_11.png" decoding="async" width="200" height="396" class="mw-file-element" data-file-width="343" data-file-height="679"></a><figcaption></figcaption></figure>
 </td>
 <td>
-<ul><li><b>Check. Tab</b></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">are Parallel&nbsp;?</span>&nbsp;: Check if two faces or two Edges are Parallel:
-<ul><li>Select the 2 faces/planes or 2 Edges/Lines and Click this button</li></ul></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">are Perpendicular&nbsp;?</span>&nbsp;: Check if two faces or two Edges are Perpendicular:
-<ul><li>Select the 2 faces/planes or 2 Edges/Lines and Click this button</li></ul></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">are Coplanar&nbsp;?</span>&nbsp;: Check if two faces or two Edges are Coplanar:
-<ul><li>Select the 2 faces/planes or 2 Edges/Lines and Click this button</li></ul></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Distance Clearance&nbsp;?</span>&nbsp;: Check for two Objects Clearance distance:
-<ul><li>Quick measurements between parallel faces and similarly placed objects Select the 2 Objects and Click this button</li></ul></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Angle&nbsp;?</span>&nbsp;: Calculate angle from 2 objects:
-<ul><li>Angle measurement between two Edges or two Planes</li>
-<li>Select the 2 Edges and Click this button</li>
-<li>or&nbsp;: Select the 2 Planes and Click this button</li>
-<li>or&nbsp;: Select one Edge and one Plane and Click this button</li></ul></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Distance&nbsp;?</span>&nbsp;: Check for two Points distance:
-<ul><li>Distances measurement and Delta values (on main Axes) between two Points</li>
-<li>Select the 2 Points and Click this button</li></ul></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Length&nbsp;?</span>&nbsp;: Check for Line Length:
-<ul><li>Length measurement and Delta values (on main Axes) for a Line</li>
-<li>Select the Line and Click this button</li></ul></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Area&nbsp;?</span>&nbsp;: Check for surface Area:
-<ul><li>Area measurement for a Plane or a set of Planes.</li>
-<li>Select One or several Planes and Click this button</li></ul></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">View</span>&nbsp;: Detect the position of the camera. The returned value is the value provided by the function getCameraOrientation().</li></ul>
+<ul><li><b>Reiter Check.</b> (&Uuml;berpr&uuml;fen)</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">are Parallel&nbsp;?</span>&nbsp;: &Uuml;berpr&uuml;ft, ob zwei Fl&auml;chen oder zwei Kanten parallel sind:
+<ul><li>Die zwei Fl&auml;chen/Ebenen oder zwei Kanten/Linien ausw&auml;hlen und auf diese Schaltfl&auml;che klicken.</li></ul></li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">are Perpendicular&nbsp;?</span>&nbsp;: &Uuml;berpr&uuml;ft, ob zwei Fl&auml;chen oder zwei Kanten senkrecht zueinander stehen:
+<ul><li>Die zwei Fl&auml;chen/Ebenen oder zwei Kanten/Linien ausw&auml;hlen und auf diese Schaltfl&auml;che klicken.</li></ul></li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">are Coplanar&nbsp;?</span>&nbsp;: &Uuml;berpr&uuml;ft, ob zwei Fl&auml;chen oder zwei Kanten koplanar sind:
+<ul><li>Die zwei Fl&auml;chen/Ebenen oder zwei Kanten/Linien ausw&auml;hlen und auf diese Schaltfl&auml;che klicken.</li></ul></li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Distance Clearance&nbsp;?</span>&nbsp;: Abstand zwischen zwei Objekten pr&uuml;fen:
+<ul><li>Schnelle Messungen zwischen parallelen Fl&auml;chen und &auml;hnlich angeordneten Objekten. Die beiden Objekte ausw&auml;hlen und auf diese Schaltfl&auml;che klicken.</li></ul></li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Angle&nbsp;?</span>&nbsp;: Den Winkel zwischen zwei Objekten berechnen:
+<ul><li>Winkelmessung zwischen zwei Kanten oder zwei Ebenen</li>
+<li>Die beiden Kanten ausw&auml;hlen und auf diese Schaltfl&auml;che klicken.</li>
+<li>or&nbsp;: Die beiden Ebenen ausw&auml;hlen und auf diese Schaltfl&auml;che klicken.</li>
+<li>or&nbsp;: Eine Kante und eine Ebene ausw&auml;hlen und auf diese Schaltfl&auml;che klicken.</li></ul></li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Distance&nbsp;?</span>&nbsp;: &Uuml;berpr&uuml;ft den Abstand zwischen zwei Punkten:
+<ul><li>Entfernungsmessung und Delta-Werte (auf Hauptachsen) zwischen zwei Punkten</li>
+<li>Die beiden Punkte ausw&auml;hlen und auf diese Schaltfl&auml;che klicken.</li></ul></li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Length&nbsp;?</span>&nbsp;: &Uuml;berpr&uuml;ft die Linienl&auml;nge:
+<ul><li>L&auml;ngenmessung und Delta-Werte (auf Hauptachsen) f&uuml;r eine Linie</li>
+<li>Die Linie ausw&auml;hlen und auf diese Schaltfl&auml;che klicken.</li></ul></li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Area&nbsp;?</span>&nbsp;: Fl&auml;che messen:
+<ul><li>Fl&auml;chenberechnung f&uuml;r eine Ebene oder eine Reihe von Ebenen.</li>
+<li>Eine oder mehrere Ebenen ausw&auml;hlen und auf diese Schaltfl&auml;che klicken.</li></ul></li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">View</span>&nbsp;: Erkennt die Position der Kamera. Der zur&uuml;ckgegebene Wert ist der Wert, der von der Funktion getCameraOrientation() bereitgestellt wird.</li></ul>
 </td></tr></tbody></table>
-</div>
 <p><span id="Script"></span>
 </p>
 <h2><span class="mw-headline" id="Skript">Skript</span></h2>
@@ -445,34 +443,34 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115052428
+Cached time: 20260115053203
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.148 seconds
-Real time usage: 0.187 seconds
-Preprocessor visited node count: 671/1000000
+CPU time usage: 0.132 seconds
+Real time usage: 0.171 seconds
+Preprocessor visited node count: 670/1000000
 Post&#8208;expand include size: 25864/2097152 bytes
 Template argument size: 3272/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 21357/5000000 bytes
+Unstrip post&#8208;expand size: 21361/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   91.277      1 -total
-  5.12%    4.669      1 Template:Userdocnavi/de
-  3.30%    3.008     54 Template:KEY
-  3.24%    2.955      1 Template:Macro/de
-  2.37%    2.167      1 Template:Navigation_menu_2
-  2.13%    1.945     11 Template:Clear
-  1.51%    1.379      1 Template:Caption
-  1.41%    1.287      1 Template:Button
-  1.13%    1.032      1 Template:MenuCommand
+100.00%   85.475      1 -total
+  4.09%    3.492      1 Template:Macro/de
+  3.05%    2.603      1 Template:Userdocnavi/de
+  2.93%    2.503     54 Template:KEY
+  1.95%    1.670     11 Template:Clear
+  1.62%    1.387      1 Template:Button
+  1.50%    1.282      1 Template:Caption
+  1.23%    1.054      1 Template:Navigation_menu_2
+  1.17%    1.001      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115052427 and revision id 1738552. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115053203 and revision id 1738554. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
