--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -253,7 +253,7 @@ Makro ArbeitsFunktionen
 <p><span id="Script"></span>
 </p>
 <h2><span class="mw-headline" id="Skript">Skript</span></h2>
-<p>Nach dem Herunterladen der komprimierten Datei, hier
+<p>Nach dem Herunterladen der komprimierten Datei von hier
 </p><p>Werkzeugleistensymbol <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=WF_wf.png&amp;filetimestamp=20150308174307&amp;.html" class="mw-file-description"><img src="../File/WF_wf.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><b><a rel="nofollow" class="external text" href="https://github.com/Rentlau/WorkFeature">Herunterladen der neusten Version auf GitHub</a></b> , 
 musst du die zip Datei entpacken und alle Dateien in dein Makroverzeichnis kopieren.
@@ -443,12 +443,12 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115053203
+Cached time: 20260115053220
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.132 seconds
-Real time usage: 0.171 seconds
+CPU time usage: 0.147 seconds
+Real time usage: 0.176 seconds
 Preprocessor visited node count: 670/1000000
 Post&#8208;expand include size: 25864/2097152 bytes
 Template argument size: 3272/2097152 bytes
@@ -459,18 +459,18 @@ Unstrip post&#8208;expand size: 21361/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   85.475      1 -total
-  4.09%    3.492      1 Template:Macro/de
-  3.05%    2.603      1 Template:Userdocnavi/de
-  2.93%    2.503     54 Template:KEY
-  1.95%    1.670     11 Template:Clear
-  1.62%    1.387      1 Template:Button
-  1.50%    1.282      1 Template:Caption
-  1.23%    1.054      1 Template:Navigation_menu_2
-  1.17%    1.001      1 Template:MenuCommand
+100.00%   82.641      1 -total
+  5.12%    4.235      1 Template:Macro/de
+  4.37%    3.610      1 Template:Userdocnavi/de
+  3.56%    2.943     54 Template:KEY
+  2.52%    2.081     11 Template:Clear
+  2.17%    1.790      1 Template:MenuCommand
+  1.88%    1.555      1 Template:Caption
+  1.82%    1.507      1 Template:Navigation_menu_2
+  1.47%    1.211      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115053203 and revision id 1738554. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115053220 and revision id 1738556. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
