--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -256,7 +256,7 @@ Makro ArbeitsFunktionen
 <p>Nach dem Herunterladen der komprimierten Datei von hier
 </p><p>Werkzeugleistensymbol <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=WF_wf.png&amp;filetimestamp=20150308174307&amp;.html" class="mw-file-description"><img src="../File/WF_wf.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><b><a rel="nofollow" class="external text" href="https://github.com/Rentlau/WorkFeature">Herunterladen der neusten Version auf GitHub</a></b> , 
-musst du die zip Datei entpacken und alle Dateien in dein Makroverzeichnis kopieren.
+muss die ZIP-Datei entpackt werden und alle Dateien in das Makroverzeichnis kopiert werden.
 </p><p><b>PS: Dieses Makro befindet sich noch in der Entwicklung. Bitte besuche diese Seite, um sicher zu sein, dass du die neueste Version hast.</b>
 </p><p><br>
 </p>
@@ -443,12 +443,12 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115053220
+Cached time: 20260115053255
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.147 seconds
-Real time usage: 0.176 seconds
+CPU time usage: 0.145 seconds
+Real time usage: 0.175 seconds
 Preprocessor visited node count: 670/1000000
 Post&#8208;expand include size: 25864/2097152 bytes
 Template argument size: 3272/2097152 bytes
@@ -459,18 +459,18 @@ Unstrip post&#8208;expand size: 21361/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   82.641      1 -total
-  5.12%    4.235      1 Template:Macro/de
-  4.37%    3.610      1 Template:Userdocnavi/de
-  3.56%    2.943     54 Template:KEY
-  2.52%    2.081     11 Template:Clear
-  2.17%    1.790      1 Template:MenuCommand
-  1.88%    1.555      1 Template:Caption
-  1.82%    1.507      1 Template:Navigation_menu_2
-  1.47%    1.211      1 Template:Button
+100.00%   76.491      1 -total
+  4.13%    3.162      1 Template:Macro/de
+  3.95%    3.019     54 Template:KEY
+  3.60%    2.754      1 Template:Userdocnavi/de
+  2.55%    1.951      1 Template:MenuCommand
+  2.36%    1.805     11 Template:Clear
+  2.20%    1.684      1 Template:Caption
+  1.69%    1.290      1 Template:Navigation_menu_2
+  1.64%    1.252      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115053220 and revision id 1738556. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115053254 and revision id 1738558. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
