--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -262,7 +262,7 @@ muss die ZIP-Datei entpackt werden und alle Dateien in das Makroverzeichnis kopi
 </p>
 <figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_GitHub_00.png&amp;filetimestamp=20160917094640&amp;.html" class="mw-file-description" title="Herunterladen von GitHub durch Dr&uuml;cken der Schaltfl&auml;che Download ZIP"><img alt="Herunterladen von GitHub durch Dr&uuml;cken der Schaltfl&auml;che Download ZIP" src="../File/Macro_Work_Features_GitHub_00.png" decoding="async" width="640" height="415" class="mw-file-element" data-file-width="1060" data-file-height="687"></a><figcaption>Herunterladen von GitHub durch Dr&uuml;cken der Schaltfl&auml;che Download ZIP</figcaption></figure>
 <div style="clear:both"></div>
-<p>Verwende den <span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Std_AddonMgr.html" title="Std AddonMgr/de">Addon-Manager</a> <b>Men&uuml; &rarr; Werkzeuge &rarr; Addon-Manager</b> zur einfachen Installation von WorkFeatures und anderen interessanten Makros
+<p>Den <span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Std_AddonMgr.html" title="Std AddonMgr/de">Addon-Manager</a> <b>Men&uuml; &rarr; Werkzeuge &rarr; Addon-Manager</b> zur einfachen Installation von ArbeitsFunktionen und anderen interessanten Makros verwenden.
 </p><p>Hier geht es zur ausf&uuml;hrlichen <a href="../de/How_to_install_macros.html" title="How to install macros/de">Anleitung zur Installation von Makros</a>.
 </p><p><span id="Examples"></span>
 </p>
@@ -443,12 +443,12 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115053530
+Cached time: 20260115053618
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.126 seconds
-Real time usage: 0.150 seconds
+CPU time usage: 0.133 seconds
+Real time usage: 0.153 seconds
 Preprocessor visited node count: 670/1000000
 Post&#8208;expand include size: 25864/2097152 bytes
 Template argument size: 3272/2097152 bytes
@@ -459,18 +459,18 @@ Unstrip post&#8208;expand size: 21361/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   68.346      1 -total
-  5.33%    3.640      1 Template:Macro/de
-  4.33%    2.960     54 Template:KEY
-  3.40%    2.323      1 Template:Userdocnavi/de
-  2.50%    1.707     11 Template:Clear
-  1.77%    1.213      1 Template:Caption
-  1.77%    1.211      1 Template:MenuCommand
-  1.71%    1.171      1 Template:Button
-  1.44%    0.983      1 Template:Navigation_menu_2
+100.00%   70.312      1 -total
+  4.35%    3.056      1 Template:Userdocnavi/de
+  4.02%    2.830     54 Template:KEY
+  3.86%    2.715      1 Template:Macro/de
+  2.31%    1.623     11 Template:Clear
+  1.97%    1.388      1 Template:Caption
+  1.94%    1.366      1 Template:Navigation_menu_2
+  1.67%    1.176      1 Template:Button
+  1.34%    0.942      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115053530 and revision id 1738562. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115053618 and revision id 1738564. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
