Updated page Macro WorkFeatures/de

--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -270,7 +270,7 @@ muss die ZIP-Datei entpackt werden und alle Dateien in das Makroverzeichnis kopi
 <p><span id="Cutting_tools"></span>
 </p>
 <h3><span class="mw-headline" id="Schneidwerkzeuge">Schneidwerkzeuge</span></h3>
-<p><b>Einstellung der Schneidwerkzeuge:</b> W&auml;hle ein zu schneidendes Objekt, eine Schnittlinie und eine Referenzebene.
+<p><b>Einstellung der Schneidwerkzeuge (Cutting tools):</b> Ein zu schneidendes Objekt, eine Schnittlinie und eine Referenzebene w&auml;hlen.
 Winkel ist ein Winkel zwischen der Schneidebene und der Referenzebene.
 Dicke ist die Breite der Schnittebene.
 </p>
@@ -443,12 +443,12 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115053618
+Cached time: 20260115053822
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.133 seconds
-Real time usage: 0.153 seconds
+CPU time usage: 0.152 seconds
+Real time usage: 0.184 seconds
 Preprocessor visited node count: 670/1000000
 Post&#8208;expand include size: 25864/2097152 bytes
 Template argument size: 3272/2097152 bytes
@@ -459,18 +459,18 @@ Unstrip post&#8208;expand size: 21361/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   70.312      1 -total
-  4.35%    3.056      1 Template:Userdocnavi/de
-  4.02%    2.830     54 Template:KEY
-  3.86%    2.715      1 Template:Macro/de
-  2.31%    1.623     11 Template:Clear
-  1.97%    1.388      1 Template:Caption
-  1.94%    1.366      1 Template:Navigation_menu_2
-  1.67%    1.176      1 Template:Button
-  1.34%    0.942      1 Template:MenuCommand
+100.00%   85.200      1 -total
+  4.74%    4.038      1 Template:Macro/de
+  3.88%    3.309      1 Template:Userdocnavi/de
+  3.63%    3.095     54 Template:KEY
+  2.42%    2.062     11 Template:Clear
+  2.40%    2.048      1 Template:Caption
+  1.85%    1.573      1 Template:Button
+  1.48%    1.263      1 Template:Navigation_menu_2
+  1.33%    1.129      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115053618 and revision id 1738564. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115053821 and revision id 1738566. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
