--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -288,29 +288,16 @@ Dicke ist die Breite der Schnittebene.
 </center>
 <div style="clear:both"></div>
 <center>
-<p><b>Execute practical example</b>
+<p><b>Praktisches Beispiel ausf&uuml;hren</b>
 </p>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 435px">
-			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_01.png&amp;filetimestamp=20150305125234&amp;.html" class="mw-file-description" title="Select the Tab Plane"><img alt="Select the Tab Plane" src="../File/Macro_Work_Features_Cutting_01.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
-			<div class="gallerytext">Select the <b>Tab <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane</span></b></div>
+			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_01.png&amp;filetimestamp=20150305125234&amp;.html" class="mw-file-description" title="Reiter Plane (Ebene) ausw&auml;hlen"><img alt="Reiter Plane (Ebene) ausw&auml;hlen" src="../File/Macro_Work_Features_Cutting_01.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
+			<div class="gallerytext"><b>Reiter <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane</span> (Ebene) ausw&auml;hlen</b></div>
 		</li>
 		<li class="gallerybox" style="width: 435px">
-			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_02.png&amp;filetimestamp=20150305125321&amp;.html" class="mw-file-description" title="and click the Plane button (you can change the dimensions of the plane (Default: 10 x 10))."><img alt="and click the Plane button (you can change the dimensions of the plane (Default: 10 x 10))." src="../File/Macro_Work_Features_Cutting_02.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
-			<div class="gallerytext">and click the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane</span> button<br> (you can change the dimensions of the plane (<b>Default: 10 x 10</b>)).</div>
-		</li>
-</ul>
-</center>
-<div style="clear:both"></div>
-<center>
-<ul class="gallery mw-gallery-traditional">
-		<li class="gallerybox" style="width: 435px">
-			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_03.png&amp;filetimestamp=20150305125352&amp;.html" class="mw-file-description" title="click you work object. The plane is created tangent of the object (here a cylinder)"><img alt="click you work object. The plane is created tangent of the object (here a cylinder)" src="../File/Macro_Work_Features_Cutting_03.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
-			<div class="gallerytext">click you work object. The plane is created tangent of the object (here a cylinder)</div>
-		</li>
-		<li class="gallerybox" style="width: 435px">
-			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_04.png&amp;filetimestamp=20150305141416&amp;.html" class="mw-file-description" title="click the Tab Modif, and 1 : click your object for cutting 2 : click the Select object button (here the cylinder and then name is displayed)"><img alt="click the Tab Modif, and 1 : click your object for cutting 2 : click the Select object button (here the cylinder and then name is displayed)" src="../File/Macro_Work_Features_Cutting_04.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
-			<div class="gallerytext">click the Tab <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Modif</span>, and <br><b>1&nbsp;:</b> click your object for cutting<br><b>2&nbsp;:</b> click the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select object</span> button (here the cylinder and then name is displayed)</div>
+			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_02.png&amp;filetimestamp=20150305125321&amp;.html" class="mw-file-description" title="und die Schaltfl&auml;che Plane dr&uuml;cken (Die Abmessungen der Ebene k&ouml;nnen ge&auml;ndert werden (Standard: 10 x 10))."><img alt="und die Schaltfl&auml;che Plane dr&uuml;cken (Die Abmessungen der Ebene k&ouml;nnen ge&auml;ndert werden (Standard: 10 x 10))." src="../File/Macro_Work_Features_Cutting_02.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
+			<div class="gallerytext">und die Schaltfl&auml;che <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane</span> dr&uuml;cken<br> (Die Abmessungen der Ebene k&ouml;nnen ge&auml;ndert werden (<b>Standard: 10 x 10</b>)).</div>
 		</li>
 </ul>
 </center>
@@ -318,12 +305,12 @@ Dicke ist die Breite der Schnittebene.
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 435px">
-			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_05.png&amp;filetimestamp=20150305141512&amp;.html" class="mw-file-description" title="3 : click your line for cutting your cylinder 4 : click the Select Cut Line (then name is displayed)"><img alt="3 : click your line for cutting your cylinder 4 : click the Select Cut Line (then name is displayed)" src="../File/Macro_Work_Features_Cutting_05.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
-			<div class="gallerytext"><b>3&nbsp;:</b> click your line for cutting your cylinder<br><b>4&nbsp;:</b> click the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select Cut Line</span> (then name is displayed)</div>
+			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_03.png&amp;filetimestamp=20150305125352&amp;.html" class="mw-file-description" title="Das Arbeitsobjekt anklicken. Die Ebene wird tangential zum Objekt (hier ein Zylinder) erstellt."><img alt="Das Arbeitsobjekt anklicken. Die Ebene wird tangential zum Objekt (hier ein Zylinder) erstellt." src="../File/Macro_Work_Features_Cutting_03.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
+			<div class="gallerytext">Das Arbeitsobjekt anklicken. Die Ebene wird tangential zum Objekt (hier ein Zylinder) erstellt.</div>
 		</li>
 		<li class="gallerybox" style="width: 435px">
-			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_06.png&amp;filetimestamp=20150305141706&amp;.html" class="mw-file-description" title="5 : click the work plane 6 : click the Select Ref. Plane button (then name is displayed)"><img alt="5 : click the work plane 6 : click the Select Ref. Plane button (then name is displayed)" src="../File/Macro_Work_Features_Cutting_06.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
-			<div class="gallerytext"><b>5&nbsp;:</b> click the work plane<br><b>6&nbsp;:</b> click the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select Ref. Plane</span> button (then name is displayed)</div>
+			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_04.png&amp;filetimestamp=20150305141416&amp;.html" class="mw-file-description" title="Den Reiter Modif. klicken, und 1 : auf das Objekt klicken, um es auszuschneiden. 2 : die Schaltfl&auml;che Select object klicken (hier wird der Zylinder und dann der Name angezeigt)"><img alt="Den Reiter Modif. klicken, und 1 : auf das Objekt klicken, um es auszuschneiden. 2 : die Schaltfl&auml;che Select object klicken (hier wird der Zylinder und dann der Name angezeigt)" src="../File/Macro_Work_Features_Cutting_04.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
+			<div class="gallerytext">Den Reiter <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Modif.</span> klicken, und <br><b>1&nbsp;:</b> auf das Objekt klicken, um es auszuschneiden.<br><b>2&nbsp;:</b> die Schaltfl&auml;che <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select object</span> klicken (hier wird der Zylinder und dann der Name angezeigt)</div>
 		</li>
 </ul>
 </center>
@@ -331,12 +318,25 @@ Dicke ist die Breite der Schnittebene.
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 435px">
-			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_07.png&amp;filetimestamp=20150305125553&amp;.html" class="mw-file-description" title="click the Apply button"><img alt="click the Apply button" src="../File/Macro_Work_Features_Cutting_07.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
-			<div class="gallerytext"> click the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Apply</span> button</div>
+			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_05.png&amp;filetimestamp=20150305141512&amp;.html" class="mw-file-description" title="3 : auf die Linie klicken, um den Zylinder zu schneiden. 4 : die Schaltfl&auml;che Select Cut Line klicken (der Name wird angezeigt)"><img alt="3 : auf die Linie klicken, um den Zylinder zu schneiden. 4 : die Schaltfl&auml;che Select Cut Line klicken (der Name wird angezeigt)" src="../File/Macro_Work_Features_Cutting_05.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
+			<div class="gallerytext"><b>3&nbsp;:</b> auf die Linie klicken, um den Zylinder zu schneiden.<br><b>4&nbsp;:</b> die Schaltfl&auml;che <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select Cut Line</span> klicken (der Name wird angezeigt)</div>
 		</li>
 		<li class="gallerybox" style="width: 435px">
-			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_08.png&amp;filetimestamp=20150305125622&amp;.html" class="mw-file-description" title="The operation is completed and all operations are preserved."><img alt="The operation is completed and all operations are preserved." src="../File/Macro_Work_Features_Cutting_08.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
-			<div class="gallerytext"> The operation is completed and all operations are preserved.</div>
+			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_06.png&amp;filetimestamp=20150305141706&amp;.html" class="mw-file-description" title="5 : die Arbeitsebene anklicken 6 : die Schaltfl&auml;che Select Ref. Plane klicken (der Name wird angezeigt)"><img alt="5 : die Arbeitsebene anklicken 6 : die Schaltfl&auml;che Select Ref. Plane klicken (der Name wird angezeigt)" src="../File/Macro_Work_Features_Cutting_06.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
+			<div class="gallerytext"><b>5&nbsp;:</b> die Arbeitsebene anklicken<br><b>6&nbsp;:</b> die Schaltfl&auml;che <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select Ref. Plane</span> klicken (der Name wird angezeigt)</div>
+		</li>
+</ul>
+</center>
+<div style="clear:both"></div>
+<center>
+<ul class="gallery mw-gallery-traditional">
+		<li class="gallerybox" style="width: 435px">
+			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_07.png&amp;filetimestamp=20150305125553&amp;.html" class="mw-file-description" title="die Schaltfl&auml;che Apply dr&uuml;cken"><img alt="die Schaltfl&auml;che Apply dr&uuml;cken" src="../File/Macro_Work_Features_Cutting_07.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
+			<div class="gallerytext"> die Schaltfl&auml;che <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Apply</span> dr&uuml;cken</div>
+		</li>
+		<li class="gallerybox" style="width: 435px">
+			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_08.png&amp;filetimestamp=20150305125622&amp;.html" class="mw-file-description" title="Die Bearbeitung ist abgeschlossen und alle Bearbeitungen sind erhalten geblieben."><img alt="Die Bearbeitung ist abgeschlossen und alle Bearbeitungen sind erhalten geblieben." src="../File/Macro_Work_Features_Cutting_08.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
+			<div class="gallerytext"> Die Bearbeitung ist abgeschlossen und alle Bearbeitungen sind erhalten geblieben.</div>
 		</li>
 </ul>
 </center>
@@ -443,34 +443,34 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115053822
+Cached time: 20260115054437
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.152 seconds
-Real time usage: 0.184 seconds
+CPU time usage: 0.139 seconds
+Real time usage: 0.177 seconds
 Preprocessor visited node count: 670/1000000
-Post&#8208;expand include size: 25864/2097152 bytes
-Template argument size: 3272/2097152 bytes
+Post&#8208;expand include size: 25865/2097152 bytes
+Template argument size: 3273/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 21361/5000000 bytes
+Unstrip post&#8208;expand size: 21823/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   85.200      1 -total
-  4.74%    4.038      1 Template:Macro/de
-  3.88%    3.309      1 Template:Userdocnavi/de
-  3.63%    3.095     54 Template:KEY
-  2.42%    2.062     11 Template:Clear
-  2.40%    2.048      1 Template:Caption
-  1.85%    1.573      1 Template:Button
-  1.48%    1.263      1 Template:Navigation_menu_2
-  1.33%    1.129      1 Template:MenuCommand
+100.00%   77.164      1 -total
+  5.66%    4.369     54 Template:KEY
+  4.88%    3.766      1 Template:Userdocnavi/de
+  4.86%    3.748      1 Template:Macro/de
+  3.92%    3.023     11 Template:Clear
+  1.90%    1.465      1 Template:Caption
+  1.72%    1.326      1 Template:Button
+  1.64%    1.268      1 Template:MenuCommand
+  1.57%    1.214      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115053821 and revision id 1738566. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115054437 and revision id 1738568. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
