--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -399,7 +399,7 @@ Dicke ist die Breite der Schnittebene.
 </p><p><span id="External_workbenches"></span>
 </p>
 <h2><span class="mw-headline" id="Externe_Arbeitsbereiche">Externe Arbeitsbereiche</span></h2>
-<p>FreeCAD Arbeitsbereiche sind einfach in <a href="../de/Python.html" title="Python/de">Python</a> zu programmieren, daher gibt es viele Leute, die zus&auml;tzliche Arbeitsbereiche au&szlig;erhalb der FreeCAD-Hauptentwickler entwickeln.
+<p>FreeCAD-Arbeitsbereiche sind einfach in <a href="../de/Python.html" title="Python/de">Python</a> zu programmieren, daher gibt es viele Leute, die zus&auml;tzliche Arbeitsbereiche au&szlig;erhalb der FreeCAD-Hauptentwickler entwickeln.
 </p><p>Die <a href="../de/External_workbenches.html" title="External workbenches/de">Externe Arbeitsbereiche</a> Seite enth&auml;lt einige Informationen und Tutorien zu einigen von ihnen, und das <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons/">FreeCAD Erweiterungen</a> Projekt zielt darauf ab, sie zu sammeln und einfach aus FreeCAD heraus zu installieren.
 </p><p>Neue Arbeitsbereiche sind in der Entwicklung, bleib dran!
 </p><p><span id="Latest_version"></span>
@@ -442,12 +442,12 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115055050
+Cached time: 20260115055124
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.135 seconds
-Real time usage: 0.172 seconds
+CPU time usage: 0.142 seconds
+Real time usage: 0.175 seconds
 Preprocessor visited node count: 670/1000000
 Post&#8208;expand include size: 25865/2097152 bytes
 Template argument size: 3273/2097152 bytes
@@ -458,18 +458,18 @@ Unstrip post&#8208;expand size: 21873/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   81.666      1 -total
-  4.62%    3.773      1 Template:Userdocnavi/de
-  4.35%    3.553      1 Template:Button
-  4.06%    3.313     54 Template:KEY
-  3.81%    3.111      1 Template:Macro/de
-  2.53%    2.062      1 Template:Navigation_menu_2
-  2.08%    1.698     11 Template:Clear
-  1.97%    1.610      1 Template:MenuCommand
-  1.72%    1.401      1 Template:Caption
+100.00%   80.481      1 -total
+  6.53%    5.258      1 Template:Userdocnavi/de
+  4.28%    3.444      1 Template:Macro/de
+  3.41%    2.744     54 Template:KEY
+  2.76%    2.224      1 Template:Caption
+  2.57%    2.071     11 Template:Clear
+  1.89%    1.525      1 Template:Navigation_menu_2
+  1.64%    1.319      1 Template:Button
+  1.53%    1.228      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115055049 and revision id 1738572. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115055123 and revision id 1738574. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
