Updated page Macro WorkFeatures/de

--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -400,7 +400,7 @@ Dicke ist die Breite der Schnittebene.
 </p>
 <h2><span class="mw-headline" id="Externe_Arbeitsbereiche">Externe Arbeitsbereiche</span></h2>
 <p>FreeCAD-Arbeitsbereiche sind einfach in <a href="../de/Python.html" title="Python/de">Python</a> zu programmieren, daher gibt es viele Leute, die zus&auml;tzliche Arbeitsbereiche au&szlig;erhalb der FreeCAD-Hauptentwickler entwickeln.
-</p><p>Die <a href="../de/External_workbenches.html" title="External workbenches/de">Externe Arbeitsbereiche</a> Seite enth&auml;lt einige Informationen und Tutorien zu einigen von ihnen, und das <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons/">FreeCAD Erweiterungen</a> Projekt zielt darauf ab, sie zu sammeln und einfach aus FreeCAD heraus zu installieren.
+</p><p>Die Seite <a href="../de/External_workbenches.html" title="External workbenches/de">Externe Arbeitsbereiche</a> enth&auml;lt einige Informationen und Tutorials zu einigen von ihnen, und das Projekt <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons/">FreeCAD-Erweiterungen</a> zielt darauf ab, sie zu sammeln und einfach aus FreeCAD heraus zu installieren.
 </p><p>Neue Arbeitsbereiche sind in der Entwicklung, bleib dran!
 </p><p><span id="Latest_version"></span>
 </p>
@@ -442,12 +442,12 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115055124
+Cached time: 20260115055203
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.142 seconds
-Real time usage: 0.175 seconds
+CPU time usage: 0.127 seconds
+Real time usage: 0.150 seconds
 Preprocessor visited node count: 670/1000000
 Post&#8208;expand include size: 25865/2097152 bytes
 Template argument size: 3273/2097152 bytes
@@ -458,18 +458,18 @@ Unstrip post&#8208;expand size: 21873/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   80.481      1 -total
-  6.53%    5.258      1 Template:Userdocnavi/de
-  4.28%    3.444      1 Template:Macro/de
-  3.41%    2.744     54 Template:KEY
-  2.76%    2.224      1 Template:Caption
-  2.57%    2.071     11 Template:Clear
-  1.89%    1.525      1 Template:Navigation_menu_2
-  1.64%    1.319      1 Template:Button
-  1.53%    1.228      1 Template:MenuCommand
+100.00%   69.284      1 -total
+  4.58%    3.172      1 Template:Macro/de
+  3.82%    2.650      1 Template:Userdocnavi/de
+  3.47%    2.408     54 Template:KEY
+  2.34%    1.623     11 Template:Clear
+  1.80%    1.247      1 Template:Caption
+  1.79%    1.239      1 Template:Button
+  1.60%    1.112      1 Template:Navigation_menu_2
+  1.52%    1.053      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115055123 and revision id 1738574. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115055202 and revision id 1738576. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
